--- a/AutoStore.csproj
+++ b/AutoStore.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="MinimalApis.Extensions" Version="0.11.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mappings\ItemMapping\" />
+  </ItemGroup>
+
 </Project>
